WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
148607
[GTK] InstallMissingMediaPluginsPermissionRequest not defined when building without GStreamer
https://bugs.webkit.org/show_bug.cgi?id=148607
Summary
[GTK] InstallMissingMediaPluginsPermissionRequest not defined when building w...
Philip Chimento
Reported
2015-08-28 21:32:23 PDT
[GTK] [Stable] InstallMissingMediaPluginsPermissionRequest not defined when building without GStreamer
Attachments
Patch
(1.77 KB, patch)
2015-08-28 21:35 PDT
,
Philip Chimento
no flags
Details
Formatted Diff
Diff
Patch
(1.78 KB, patch)
2015-10-26 20:50 PDT
,
Philip Chimento
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Philip Chimento
Comment 1
2015-08-28 21:35:48 PDT
Created
attachment 260212
[details]
Patch
Philip Chimento
Comment 2
2015-08-28 21:36:39 PDT
Comment on
attachment 260212
[details]
Patch Add a stub for the InstallMissingMediaPluginsPermissionRequest class for the case when video is disabled or not using GStreamer. It's OK that this class does nothing, because the associated C API contains an assert_not_reached if video is disabled. We just need to define the symbol so that the function signature will compile. I'll add this to the proposed merges for 2.9.92.
Michael Catanzaro
Comment 3
2015-09-13 07:06:07 PDT
FYI: we use [Stable] to indicate a patch that should not be committed to master (so it should not be used in combination with commit-queue).
Philip Chimento
Comment 4
2015-09-13 10:12:54 PDT
OK, thanks for explaining. I meant this patch to be for both master and stable. My confusion arose because the instructions on
http://trac.webkit.org/wiki/WebKitGTK/2.10.x
say to use "[GTK] [Stable]" so I'll add a note there explaining what you just told me.
Michael Catanzaro
Comment 5
2015-10-26 08:01:38 PDT
Since this is a build fix, any committer can approve it, so if you attach a new patch with the "Reviewed by NOBODOY" line replaced with "Unreviewed" and request only commit-queue? but not review?, I will grant that.
Philip Chimento
Comment 6
2015-10-26 20:50:47 PDT
Created
attachment 264118
[details]
Patch Thank you here as well!
WebKit Commit Bot
Comment 7
2015-10-26 22:16:37 PDT
Comment on
attachment 264118
[details]
Patch Clearing flags on attachment: 264118 Committed
r191618
: <
http://trac.webkit.org/changeset/191618
>
WebKit Commit Bot
Comment 8
2015-10-26 22:16:42 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug